-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8214412 | 13 | Daniel Daugherty | P3 | Closed | Not an Issue |
A side effect of of JDK-8180932 "Parallelize safepoint cleanup" is that the time logged for "deflating idle monitors" no longer covers the time actually spent deflating monitors. The calls to ObjectSynchronizer::deflate_thread_local_monitors(), via the ParallelSPCleanupTask, is only accounted to the total safepoint clean up time.
Example:
> [604.436s][604435916180ns][info ][safepoint ] Entering safepoint
> region: ZOperation
>
> [604.437s][604437075880ns][info ][safepoint,cleanup] deflating idle
> monitors, 0.0000008 secs
>
> [604.437s][604437086769ns][info ][safepoint,cleanup] updating inline
> caches, 0.0000005 secs
>
> [604.437s][604437093326ns][info ][safepoint,cleanup] compilation policy
> safepoint handler, 0.0000007 secs
>
> [604.437s][604437099415ns][info ][safepoint,cleanup] purging class
> loader data graph, 0.0000004 secs
>
> [604.437s][604437105660ns][info ][safepoint,cleanup] resizing system
> dictionaries, 0.0000006 secs
>
> INFO: Deflate: InCirc=9646 InUse=61 Scavenged=9585
> ForceMonitorScavenge=0 : pop=20066 free=12829
>
> [604.437s][604437119123ns][info ][safepoint,cleanup] safepoint cleanup
> tasks, 0.0011891 secs
>
Example:
> [604.436s][604435916180ns][info ][safepoint ] Entering safepoint
> region: ZOperation
>
> [604.437s][604437075880ns][info ][safepoint,cleanup] deflating idle
> monitors, 0.0000008 secs
>
> [604.437s][604437086769ns][info ][safepoint,cleanup] updating inline
> caches, 0.0000005 secs
>
> [604.437s][604437093326ns][info ][safepoint,cleanup] compilation policy
> safepoint handler, 0.0000007 secs
>
> [604.437s][604437099415ns][info ][safepoint,cleanup] purging class
> loader data graph, 0.0000004 secs
>
> [604.437s][604437105660ns][info ][safepoint,cleanup] resizing system
> dictionaries, 0.0000006 secs
>
> INFO: Deflate: InCirc=9646 InUse=61 Scavenged=9585
> ForceMonitorScavenge=0 : pop=20066 free=12829
>
> [604.437s][604437119123ns][info ][safepoint,cleanup] safepoint cleanup
> tasks, 0.0011891 secs
>
- backported by
-
JDK-8214412 Incorrect time logged for monitor deflation
-
- Closed
-