8202415: Incorrect time logged for monitor deflation

Add support for "deflating per-thread idle monitors" log mesgs.

Reviewed-by: dholmes, coleenp